--- a/курсовая/create-task.html
+++ b/курсовая/create-task.html
@@ -17,6 +17,9 @@
         <label for="3">Срок выполнения</label>
         <input id="3" type="datetime" name="date" placeholder="YYYY-MM-DD">
         <span class="date error"></span>
+        <button id="man">Добавить участника</button>
+        <div id="man-input">
+        </div>
         <input type="submit" value="Добавить задачу">
     </form>
     <script src="js/create-task.js"></script>
